--- a/daily-tasks-app/Dockerfile
+++ b/daily-tasks-app/Dockerfile
@@ -1,7 +1,8 @@
-FROM node:20-alpine
+FROM node:22-alpine
 
 WORKDIR /app
 
+# Install dependencies with retry and alternative registry
 COPY package.json package-lock.json ./
 
 RUN npm install
