--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   postgres:
@@ -12,7 +11,6 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./server/db/init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U taskuser -d tasks_db"]
       interval: 5s
@@ -21,13 +19,13 @@ services:
 
   backend:
     build:
-      context: ./server
+      context: ./focus-backend
       dockerfile: Dockerfile
+      network: host
     container_name: tasks_backend
+    network_mode: host
     volumes:
-      - ./server:/app
-    ports:
-      - "8000:8000"
+      - ./focus-backend:/app
     environment:
       - DB_HOST=postgres
       - DB_PORT=5432
@@ -37,12 +35,15 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
 
   frontend:
     build:
-      context: ./daily-tasks-app
+      context: ./daily-tasks-app  
       dockerfile: Dockerfile
+    network_mode: "host"
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     container_name: tasks_frontend
     volumes:
       - ./daily-tasks-app:/app
@@ -50,7 +51,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - REACT_APP_API_URL=http://localhost:8000
+      - REACT_APP_API_URL=http://0.0.0.0:8000
     depends_on:
       - backend
 
