--- a/focus-backend/Dockerfile
+++ b/focus-backend/Dockerfile
@@ -1,12 +1,18 @@
-FROM python:3.10-slim
+FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY requirements.txt .
+# Install uv
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /bin/uv
 
-RUN pip install --no-cache-dir -r requirements.txt
+# Copy the project files
+COPY pyproject.toml uv.lock ./
+
+# Install dependencies
+RUN uv sync
 
 COPY . .
 
+
 # Run the application
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"] 
+CMD ["uv", "run", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"] 
