--- a/daily-tasks-app/Dockerfile
+++ b/daily-tasks-app/Dockerfile
@@ -1,11 +1,16 @@
-FROM node:22-alpine
+# Explicitly use native architecture for better performance
+FROM --platform=$BUILDPLATFORM node:22-alpine
 
 WORKDIR /app
 
-# Install dependencies with retry and alternative registry
+# Add package files for better Docker layer caching
 COPY package.json package-lock.json ./
 
-RUN npm install
+# Optimize npm for performance (especially on arm64)
+RUN npm config set unsafe-perm true && \
+    npm config set fetch-retries 3 && \
+    npm config set fetch-retry-factor 2 && \
+    npm install --prefer-offline --no-audit
 
 COPY . .
 
