--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,53 @@
-
 services:
-  postgres:
-    image: postgres:15
-    container_name: tasks_postgres
-    environment:
-      POSTGRES_USER: taskuser
-      POSTGRES_PASSWORD: taskpass
-      POSTGRES_DB: tasks_db
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U taskuser -d tasks_db"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
+  # postgres:
+  #   image: postgres:15
+  #   container_name: tasks_postgres
+  #   environment:
+  #     POSTGRES_USER: taskuser
+  #     POSTGRES_PASSWORD: taskpass
+  #     POSTGRES_DB: tasks_db
+  #   ports:
+  #     - "5432:5432"
+  #   volumes:
+  #     - postgres_data:/var/lib/postgresql/data
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "pg_isready -U taskuser -d tasks_db"]
+  #     interval: 5s
+  #     timeout: 5s
+  #     retries: 5
 
   backend:
     build:
       context: ./focus-backend
       dockerfile: Dockerfile
       network: host
+      x-bake:
+        platforms:
+          - linux/amd64
+          - linux/arm64
     container_name: tasks_backend
     network_mode: host
     volumes:
       - ./focus-backend:/app
-    environment:
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - DB_USER=taskuser
-      - DB_PASSWORD=taskpass
-      - DB_NAME=tasks_db
-    depends_on:
-      postgres:
-        condition: service_healthy
+    # environment:
+    #   - DB_HOST=postgres
+    #   - DB_PORT=5432
+    #   - DB_USER=taskuser
+    #   - DB_PASSWORD=taskpass
+    #   - DB_NAME=tasks_db
+    # depends_on:
+    #   postgres:
+    #     condition: service_healthy
+    command: ["uv","run","uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
 
   frontend:
     build:
       context: ./daily-tasks-app  
       dockerfile: Dockerfile
+      x-bake:
+        platforms:
+          - linux/amd64
+          - linux/arm64
     network_mode: "host"
     dns:
       - 8.8.8.8
