--- a/focus-backend/pyproject.toml
+++ b/focus-backend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.115.12",
+    "psycopg2-binary>=2.9.10",
     "pydantic>=2.11.5",
     "sqlmodel>=0.0.24",
     "uvicorn>=0.34.2",
