--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 services:
-  # postgres:
-  #   image: postgres:15
-  #   container_name: tasks_postgres
-  #   environment:
-  #     POSTGRES_USER: taskuser
-  #     POSTGRES_PASSWORD: taskpass
-  #     POSTGRES_DB: tasks_db
-  #   ports:
-  #     - "5432:5432"
-  #   volumes:
-  #     - postgres_data:/var/lib/postgresql/data
-  #   healthcheck:
-  #     test: ["CMD-SHELL", "pg_isready -U taskuser -d tasks_db"]
-  #     interval: 5s
-  #     timeout: 5s
-  #     retries: 5
+  postgres:
+    image: postgres:15
+    container_name: tasks_postgres
+    environment:
+      POSTGRES_USER: taskuser
+      POSTGRES_PASSWORD: taskpass
+      POSTGRES_DB: tasks_db
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U taskuser -d tasks_db"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   backend:
     build:
@@ -26,18 +26,15 @@ services:
           - linux/amd64
           - linux/arm64
     container_name: tasks_backend
-    network_mode: host
     volumes:
       - ./focus-backend:/app
-    # environment:
-    #   - DB_HOST=postgres
-    #   - DB_PORT=5432
-    #   - DB_USER=taskuser
-    #   - DB_PASSWORD=taskpass
-    #   - DB_NAME=tasks_db
-    # depends_on:
-    #   postgres:
-    #     condition: service_healthy
+    ports:
+      - "8000:8000"
+    environment:
+      - CONN_STRING=postgresql://taskuser:taskpass@postgres:5432/tasks_db
+    depends_on:
+      postgres:
+        condition: service_healthy
     command: ["uv","run","uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
 
   frontend:
